fix: fixed issues

--- a/template_content/smart_contracts/config.py.jinja
+++ b/template_content/smart_contracts/config.py.jinja
@@ -15,7 +15,7 @@ from algosdk.v2client.algod import AlgodClient
 from algosdk.v2client.indexer import IndexerClient
 
 from smart_contracts import helloworld
-from smart_contracts.artifacts.HelloWorldApp import client
+from smart_contracts.artifacts.HelloWorldApp.client import HelloWorldAppClient
 
 logger = logging.getLogger(__name__)
 
@@ -33,7 +33,7 @@ def deploy(
     is_local = is_localnet(algod_client)
     match app_spec.contract.name:
         case "HelloWorldApp":
-            app_client = client.HelloWorldAppClient(
+            app_client = HelloWorldAppClient(
                 algod_client,
                 creator=deployer,
                 indexer_client=indexer_client,
