--- a/template_content/smart_contracts/{% if deployment_language == 'typescript' %}package.json{% endif %}.jinja
+++ b/template_content/smart_contracts/{% if deployment_language == 'typescript' %}package.json{% endif %}.jinja
@@ -11,7 +11,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@algorandfoundation/algokit-utils": "^1.1.1"
+    "@algorandfoundation/algokit-utils": "^2.0.0-beta.16"
   },
   "devDependencies": {
     "dotenv": "^16.0.3",
