--- a/template_content/smart_contracts/{% if deployment_language == 'typescript' %}config.py{% endif %}.jinja
+++ b/template_content/smart_contracts/{% if deployment_language == 'typescript' %}config.py{% endif %}.jinja
@@ -1,4 +1,5 @@
 import logging
+{% if deployment_language == 'python' %}
 from algokit_utils import (
     Account,
     ApplicationSpecification,
@@ -12,13 +13,15 @@ from algokit_utils import (
 from algosdk.util import algos_to_microalgos
 from algosdk.v2client.algod import AlgodClient
 from algosdk.v2client.indexer import IndexerClient
-from smart_contracts.artifacts.HelloWorldApp.client import HelloWorldAppClient
+
 from smart_contracts import helloworld
+from smart_contracts.artifacts.HelloWorldApp.client import HelloWorldAppClient
 
 logger = logging.getLogger(__name__)
 
 # define contracts to build and/or deploy
 contracts = [helloworld.app]
+
 
 # define deployment behaviour based on supplied app spec
 def deploy(
@@ -70,3 +73,4 @@ def deploy(
             raise Exception(
                 f"Attempt to deploy unknown contract {app_spec.contract.name}"
             )
+{% endif -%}
