--- a/template_content/smart_contracts/helpers/build.py.jinja
+++ b/template_content/smart_contracts/helpers/build.py.jinja
@@ -7,11 +7,11 @@ import beaker
 
 logger = logging.getLogger(__name__)
 {% if deployment_language == 'python' -%}
-deployment_extension = 'py'
-deployment_language = 'python'
+deployment_extension = "py"
+deployment_language = "python"
 {%- elif deployment_language == 'typescript' %}
-deployment_extension = 'ts'
-deployment_language = 'typescript'
+deployment_extension = "ts"
+deployment_language = "typescript"
 {% endif %}
 
 
@@ -25,18 +25,20 @@ def build(output_dir: Path, app: beaker.Application) -> Path:
     specification.export(output_dir)
 
     try:
-        subprocess.run(
-            [
-                "algokit",
-                "generate",
-                "client",
-                output_dir / "application.json",
-                "--output",
-                output_dir / "client.py",
-            ]
-        )
+      subprocess.run(
+          [
+              "algokit",
+              "generate",
+              "client",
+              output_dir / "application.json",
+              "--output",
+              output_dir / f"client.{deployment_extension}",
+              "--language",
+              f"{deployment_language}",
+          ]
+      )
     except subprocess.CalledProcessError as e:
         logger.error(f"Build process failed with error code {e.returncode}")
         raise e
-    return output_dir / "application.json"
+
     return output_dir / "application.json"
