--- a/template_content/smart_contracts/helpers/build.py.jinja
+++ b/template_content/smart_contracts/helpers/build.py.jinja
@@ -8,10 +8,8 @@ import beaker
 logger = logging.getLogger(__name__)
 {% if deployment_language == 'python' -%}
 deployment_extension = "py"
-deployment_language = "python"
 {%- elif deployment_language == 'typescript' %}
 deployment_extension = "ts"
-deployment_language = "typescript"
 {% endif %}
 
 
@@ -34,7 +32,7 @@ def build(output_dir: Path, app: beaker.Application) -> Path:
               "--output",
               output_dir / f"client.{deployment_extension}",
               "--language",
-              f"{deployment_language}",
+              f"{'python' if (deployment_extension == 'py')  else 'typescript'}",
           ]
       )
     except subprocess.CalledProcessError as e:
