--- a/template_content/smart_contracts/helpers/build.py.jinja
+++ b/template_content/smart_contracts/helpers/build.py.jinja
@@ -8,10 +8,9 @@ import beaker
 logger = logging.getLogger(__name__)
 {% if deployment_language == 'python' -%}
 deployment_extension = "py"
-{%- elif deployment_language == 'typescript' %}
+{% elif deployment_language == 'typescript' -%}
 deployment_extension = "ts"
 {% endif %}
-
 
 def build(output_dir: Path, app: beaker.Application) -> Path:
     output_dir = output_dir.resolve()
@@ -23,16 +22,16 @@ def build(output_dir: Path, app: beaker.Application) -> Path:
     specification.export(output_dir)
 
     try:
-      subprocess.run(
-          [
-              "algokit",
-              "generate",
-              "client",
-              output_dir / "application.json",
-              "--output",
-              output_dir / f"client.{deployment_extension}",
-          ]
-      )
+        subprocess.run(
+            [
+                "algokit",
+                "generate",
+                "client",
+                output_dir / "application.json",
+                "--output",
+                output_dir / f"client.{deployment_extension}",
+            ]
+        )
     except subprocess.CalledProcessError as e:
         logger.error(f"Build process failed with error code {e.returncode}")
         raise e
