--- a/template_content/README.md.jinja
+++ b/template_content/README.md.jinja
@@ -127,7 +127,7 @@ This project makes use of Python to build Algorand smart contracts. The followin
  - [pip-audit](https://pypi.org/project/pip-audit/): Tool for scanning Python environments for packages with known vulnerabilities.
 {%- endif %}
 {%- if use_pre_commit %}
- - [pre-commit](https://pre-commit.com/): to enable pre-commit you need to run `pre-commit install` in the root of the repository.
+ - [pre-commit](https://pre-commit.com/): A framework for managing and maintaining multi-language pre-commit hooks, to enable pre-commit you need to run `pre-commit install` in the root of the repository. This will install the pre-commit hooks and run them against modified files when committing. If any of the hooks fail, the commit will be aborted. To run the hooks on all files, use `pre-commit run --all-files`.
 {%- endif %}
 {%- if deployment_language == "typescript" %}
 - [npm](https://www.npmjs.com/): Node.js package manager
