--- a/template_content/smart_contracts/__main__.py.jinja
+++ b/template_content/smart_contracts/__main__.py.jinja
@@ -1,12 +1,28 @@
+import dataclasses
 import logging
 import sys
+from collections.abc import Callable
 from pathlib import Path
 
-from smart_contracts import config
+from algokit_utils import Account, ApplicationSpecification
+from algosdk.v2client.algod import AlgodClient
+from algosdk.v2client.indexer import IndexerClient
+from beaker import Application
+
 from smart_contracts.helpers.build import build
 {% if deployment_language == 'python' -%}
 from smart_contracts.helpers.deploy import deploy
 {% endif %}
+
+from .{{ contract_name }} import deploy_config, {{ contract_name }}
+
+@dataclasses.dataclass
+class SmartContract:
+    app: Application
+    deploy: Callable[
+        [AlgodClient, IndexerClient, ApplicationSpecification, Account], None
+    ]
+
 logging.basicConfig(
     level=logging.DEBUG, format="%(asctime)s %(levelname)-10s: %(message)s"
 )
@@ -16,26 +32,28 @@ root_path = Path(__file__).parent
 
 
 def main(action: str) -> None:
+    # define contracts to build and/or deploy
+    contracts = [SmartContract(app={{ contract_name }}.app, deploy=deploy_config.deploy)]
+
     artifact_path = root_path / "artifacts"
     match action:
         case "build":
-            for app in config.contracts:
-                logger.info(f"Building app {app.name}")
-                build(artifact_path / app.name, app)
+            for contract in contracts:
+                logger.info(f"Building app {contract.app.name}")
+                build(artifact_path / contract.app.name, contract.app)
         {%- if deployment_language == 'python' %}
         case "deploy":
-            for app in config.contracts:
-                logger.info(f"Deploying app {app.name}")
-                app_spec_path = artifact_path / app.name / "application.json"
-                deploy(app_spec_path, config.deploy)
+            for contract in contracts:
+                logger.info(f"Deploying app {contract.app.name}")
+                app_spec_path = artifact_path / contract.app.name / "application.json"
+                deploy(app_spec_path, contract.deploy)
         case "all":
-            for app in config.contracts:
-                logger.info(f"Building app {app.name}")
-                app_spec_path = build(artifact_path / app.name, app)
-                logger.info(f"Deploying {app.name}")
-                deploy(app_spec_path, config.deploy)
+            for contract in contracts:
+                logger.info(f"Building app {contract.app.name}")
+                app_spec_path = build(artifact_path / contract.app.name, contract.app)
+                logger.info(f"Deploying {contract.app.name}")
+                deploy(app_spec_path, contract.deploy)
         {%- endif %}
-
 
 if __name__ == "__main__":
     if len(sys.argv) > 1:
