--- a/template_content/smart_contracts/__main__.py.jinja
+++ b/template_content/smart_contracts/__main__.py.jinja
@@ -12,16 +12,18 @@ from beaker import Application
 from smart_contracts.helpers.build import build
 {% if deployment_language == 'python' -%}
 from smart_contracts.helpers.deploy import deploy
-{% endif %}
-
 from .{{ contract_name }} import deploy_config, {{ contract_name }}
+{% endif %}
+{% if deployment_language == 'typescript' -%}
+from .{{ contract_name }} import {{ contract_name }}
+{% endif %}
 
 @dataclasses.dataclass
 class SmartContract:
     app: Application
     deploy: Callable[
         [AlgodClient, IndexerClient, ApplicationSpecification, Account], None
-    ]
+    ] | None = None
 
 logging.basicConfig(
     level=logging.DEBUG, format="%(asctime)s %(levelname)-10s: %(message)s"
@@ -33,7 +35,12 @@ root_path = Path(__file__).parent
 
 def main(action: str) -> None:
     # define contracts to build and/or deploy
+    {% if deployment_language == 'python' -%}
     contracts = [SmartContract(app={{ contract_name }}.app, deploy=deploy_config.deploy)]
+    {% endif %}
+    {% if deployment_language == 'typescript' -%}
+    contracts = [SmartContract(app={{ contract_name }}.app)]
+    {% endif %}
 
     artifact_path = root_path / "artifacts"
     match action:
