--- a/template_content/.algokit.toml.jinja
+++ b/template_content/.algokit.toml.jinja
@@ -7,3 +7,10 @@ command = "poetry run python -m smart_contracts deploy"
 {%- elif deployment_language == 'typescript' %}
 command = "npm run deploy:ci"
 {%- endif %}
+environment_secrets = [
+  "DEPLOYER_MNEMONIC",
+  {% if use_dispenser == %}"DISPENSER_MNEMONIC",{% endif %},
+]
+
+[deploy.localnet]
+environment_secrets = []
