--- a/template_content/.env.localnet.template.jinja
+++ b/template_content/.env.localnet.template.jinja
@@ -1,3 +1,4 @@
+# this file should contain environment variables specific to algokit localnet
 ALGOD_TOKEN={{ algod_token }}
 ALGOD_SERVER={{ algod_server }}
 ALGOD_PORT={{ algod_port }}
