--- a/template_content/{% if use_github_actions %}.github{% endif %}/workflows/cd.yaml.jinja
+++ b/template_content/{% if use_github_actions %}.github{% endif %}/workflows/cd.yaml.jinja
@@ -42,10 +42,16 @@ jobs:
           git config --global user.email "actions@github.com" && git config --global user.name "github-actions"
 
       - name: Deploy to testnet
-        run: algokit deploy testnet --ci
+        run: algokit deploy testnet
         env:
-          # Deployer mnemonic is required. If not using the dispenser mnemonic, it must also be funded with enough
-          # Algos to deploy and fund the smart contracts created
-          DEPLOYER_MNEMONIC: ${{ secrets.DEPLOYER_MNEMONIC }}
-          # Dispenser mnemonic is optional, but can be used to ensure the deployer account is funded
-          DISPENSER_MNEMONIC: ${{ secrets.DISPENSER_MNEMONIC }}
+{%- if use_dispenser %}
+          # This is the account that becomes the creator of the contract
+          DEPLOYER_MNEMONIC: {% raw %}${{ secrets.DEPLOYER_MNEMONIC }}{% endraw %}
+          # The dispenser account is used to ensure the deployer account is funded
+          DISPENSER_MNEMONIC: {% raw %}${{ secrets.DISPENSER_MNEMONIC }}{% endraw %}
+{%- else %}
+          # This is the account that becomes the creator of the contract.
+          # Since we are not using the optional dispenser account (via DISPENSER_MNEMONIC),
+          # it must also be funded with enough Algos to deploy and fund the smart contracts created
+          DEPLOYER_MNEMONIC: {% raw %}${{ secrets.DEPLOYER_MNEMONIC }}{% endraw %}
+{%- endif %}
