--- a/template_content/smart_contracts/__main__.py.jinja
+++ b/template_content/smart_contracts/__main__.py.jinja
@@ -9,15 +9,14 @@ from algosdk.v2client.algod import AlgodClient
 from algosdk.v2client.indexer import IndexerClient
 from beaker import Application
 
-from smart_contracts.helpers.build import build
 {% if deployment_language == 'python' -%}
-from smart_contracts.helpers.deploy import deploy
 from smart_contracts.{{ contract_name }} import deploy_config, {{ contract_name }}
-{% elif deployment_language == 'typescript' -%}
+from smart_contracts.helpers.build import build
+from smart_contracts.helpers.deploy import deploy
+{%- elif deployment_language == 'typescript' %}
 from smart_contracts.{{ contract_name }} import {{ contract_name }}
-{% endif -%}
-
-
+from smart_contracts.helpers.build import build
+{%- endif %}
 
 
 @dataclasses.dataclass
@@ -32,7 +31,6 @@ logging.basicConfig(
     level=logging.DEBUG, format="%(asctime)s %(levelname)-10s: %(message)s"
 )
 logger = logging.getLogger(__name__)
-
 root_path = Path(__file__).parent
 
 
@@ -63,6 +61,7 @@ def main(action: str) -> None:
                 logger.info(f"Deploying {contract.app.name}")
                 deploy(app_spec_path, contract.deploy)
         {%- endif %}
+
 
 if __name__ == "__main__":
     if len(sys.argv) > 1:
