--- a/template_content/README.md.jinja
+++ b/template_content/README.md.jinja
@@ -8,11 +8,13 @@ This project has been generated using AlgoKit. See below for default getting sta
 
 1. Clone this repository locally
 2. Install pre-requisites:
+   - Make sure to have [Docker](https://www.docker.com/) installed and running on your machine.
    - Install `AlgoKit` - [Link](https://github.com/algorandfoundation/algokit-cli#install): The minimum required version is `1.1`. Ensure you can execute `algokit --version` and get `1.1` or later.
    - Bootstrap your local environment; run `algokit bootstrap all` within this folder, which will:
      - Install `Poetry` - [Link](https://python-poetry.org/docs/#installation): The minimum required version is `1.2`. Ensure you can execute `poetry -V` and get `1.2`+
      - Run `poetry install` in the root directory, which will set up a `.venv` folder with a Python virtual environment and also install all Python dependencies
      - Copy `.env.template` to `.env`
+   - Run `algokit localnet start` to start a local Algorand network in Docker. If you are using VS Code launch configurations provided by the template, this will be done automatically for you.
 {%- if deployment_language == "typescript" %}
      - Run `npm install` to install NPM packages
 {% endif %}
@@ -39,6 +41,8 @@ This project has been generated using AlgoKit. See below for default getting sta
 
 1. If you update to the latest source code and there are new dependencies you will need to run `algokit bootstrap all` again
 2. Follow step 3 above
+
+> For guidance on `smart_contracts` folder and adding new contracts to the project please see [README](smart_contracts/README.md) on the respective folder.
 
 {% if use_github_actions -%}
 ### Continuous Integration / Continuous Deployment (CI/CD)
