chore: devrel feedback

--- a/template_content/README.md.jinja
+++ b/template_content/README.md.jinja
@@ -44,7 +44,7 @@ This project has been generated using AlgoKit. See below for default getting sta
 
 > For guidance on `smart_contracts` folder and adding new contracts to the project please see [README](smart_contracts/README.md) on the respective folder.
 
-{% if use_github_actions -%}
+{%- if use_github_actions -%}
 ### Continuous Integration / Continuous Deployment (CI/CD)
 
 This project uses [GitHub Actions](https://docs.github.com/en/actions/learn-github-actions/understanding-github-actions) to define CI/CD workflows, which are located in the [`.github/workflows`](./.github/workflows) folder.
