refactor: stripping down is_deletable is_updatable from starter preset

--- a/template_content/smart_contracts/README.md.jinja
+++ b/template_content/smart_contracts/README.md.jinja
@@ -6,7 +6,7 @@ By the default the template creates a single `HelloWorld` contract under {{ cont
 2. Each contract has potentially has different creation parameters and deployment steps. Hence, you need to define your deployment logic in {% if deployment_language == 'python' %}`deploy_config.py`{% elif deployment_language == 'typescript' %}`deploy-config.ts`{% endif %}file.
 3. Reference your contract in `config.py` file. This will tell instruct the helper scripts on which exact contracts require building and generation of typed clients.
 {%- if deployment_language == 'typescript' %}
-4. Since you are generating a Typescript client, you also need to reference your contract in `index.ts` file. This will instruct the typescript specific helper scripts on how exactly to deploy your contract.
+4. Since you are generating a TypeScript client, you also need to reference your contract in `index.ts` file. This will instruct the TypeScript specific helper scripts on how exactly to deploy your contract.
 {%- endif %}
 
 > Please note, above is just a suggested convention tailored for the base configuration and structure of this template. You are free to modify the structure and naming conventions as you see fit.
