--- a/template_content/smart_contracts/{{ contract_name }}/contract.py.jinja
+++ b/template_content/smart_contracts/{{ contract_name }}/contract.py.jinja
@@ -1,17 +1,29 @@
 import beaker
 import pyteal as pt
+{% if preset_name == 'starter' %}
 
-from smart_contracts.helpers.deployment_standard import (
-    deploy_time_immutability_control,
-    deploy_time_permanence_control,
-)
+app = beaker.Application("{{ contract_name }}")
+{% elif preset_name == 'production' -%}
+from algokit_utils import DELETABLE_TEMPLATE_NAME, UPDATABLE_TEMPLATE_NAME
 
-app = (
-    beaker.Application("{{ contract_name }}")
-    .apply(deploy_time_immutability_control)
-    .apply(deploy_time_permanence_control)
-)
+app = beaker.Application("{{ contract_name }}")
 
+
+@app.update(authorize=beaker.Authorize.only_creator(), bare=True)
+def update() -> pt.Expr:
+    return pt.Assert(
+        pt.Tmpl.Int(UPDATABLE_TEMPLATE_NAME),
+        comment="Check app is updatable",
+    )
+
+
+@app.delete(authorize=beaker.Authorize.only_creator(), bare=True)
+def delete() -> pt.Expr:
+    return pt.Assert(
+        pt.Tmpl.Int(DELETABLE_TEMPLATE_NAME),
+        comment="Check app is deletable",
+    )
+{% endif %}
 
 @app.external
 def hello(name: pt.abi.String, *, output: pt.abi.String) -> pt.Expr:
