--- a/template_content/smart_contracts/{{ contract_name }}/{% if deployment_language == 'typescript' %}deploy-config.ts{% endif %}.jinja
+++ b/template_content/smart_contracts/{{ contract_name }}/{% if deployment_language == 'typescript' %}deploy-config.ts{% endif %}.jinja
@@ -30,12 +30,19 @@ export async function deploy() {
     algod,
   )
 
+  {%- if preset_name == 'starter' %}
+  const app = await appClient.deploy({
+    onSchemaBreak: 'append',
+    onUpdate: 'append',
+  })
+  {% elif preset_name == 'production' %}
   const app = await appClient.deploy({
     allowDelete: !isMainNet,
     allowUpdate: !isMainNet,
     onSchemaBreak: isMainNet ? 'append' : 'replace',
     onUpdate: isMainNet ? 'append' : 'update',
   })
+  {% endif %}
 
   // If app was just created fund the app account
   if (['create', 'replace'].includes(app.operationPerformed)) {
