--- a/template_content/.algokit.toml.jinja
+++ b/template_content/.algokit.toml.jinja
@@ -16,3 +16,8 @@ environment_secrets = [
 
 [deploy.localnet]
 environment_secrets = []
+
+[generators.create_contract]
+name = "smart contract"
+description = "Adds new smart contract to existing project"
+path = ".generators/create_contract"
