--- a/template_content/{% if deployment_language == 'typescript' %}package.json{% endif %}.jinja
+++ b/template_content/{% if deployment_language == 'typescript' %}package.json{% endif %}.jinja
@@ -9,7 +9,8 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@algorandfoundation/algokit-utils": "^2.3.1"
+    "@algorandfoundation/algokit-utils": "^2.2.1",
+    "algosdk": "^2.3.0"
   },
   "devDependencies": {
     "dotenv": "^16.0.3",
