--- a/template_content/{% if deployment_language == 'typescript' %}package.json{% endif %}.jinja
+++ b/template_content/{% if deployment_language == 'typescript' %}package.json{% endif %}.jinja
@@ -9,8 +9,8 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@algorandfoundation/algokit-utils": "^2.3.1",
-    "algosdk": "^2.3.0"
+    "@algorandfoundation/algokit-utils": "^v3.0.0-beta.4",
+    "algosdk": "^2.5.0"
   },
   "devDependencies": {
     "dotenv": "^16.0.3",
