--- a/template_content/{% if deployment_language == 'typescript' %}package.json{% endif %}.jinja
+++ b/template_content/{% if deployment_language == 'typescript' %}package.json{% endif %}.jinja
@@ -9,7 +9,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@algorandfoundation/algokit-utils": "^v3.0.0-beta.4",
+    "@algorandfoundation/algokit-utils": "^3.0.0",
     "algosdk": "^2.5.0"
   },
   "devDependencies": {
