--- a/template_content/{% if deployment_language == 'typescript' %}package.json{% endif %}.jinja
+++ b/template_content/{% if deployment_language == 'typescript' %}package.json{% endif %}.jinja
@@ -8,6 +8,9 @@
     "deploy:ci": "ts-node --transpile-only -r dotenv/config smart_contracts/index.ts",
     "format": "prettier --write ."
   },
+  "engines": {
+    "node": ">=18.0"
+  },
   "dependencies": {
     "@algorandfoundation/algokit-utils": "^3.0.0",
     "algosdk": "^2.5.0"
