--- a/template_content/.algokit/generators/create_contract/smart_contracts/{% raw %}{{ contract_name }}{% endraw %}/{% if deployment_language == 'typescript' %}deploy-config.ts.j2{% endif %}.jinja
+++ b/template_content/.algokit/generators/create_contract/smart_contracts/{% raw %}{{ contract_name }}{% endraw %}/{% if deployment_language == 'typescript' %}deploy-config.ts.j2{% endif %}.jinja
@@ -8,10 +8,7 @@ export async function deploy() {
 
   const algod = algokit.getAlgoClient()
   const indexer = algokit.getAlgoIndexerClient()
-  const deployer = await algokit.getAccount(
-    { config: algokit.getAccountConfigFromEnvironment('DEPLOYER'), fundWith: algokit.algos(3) },
-    algod,
-  )
+  const deployer = await algokit.mnemonicAccountFromEnvironment({ name: 'DEPLOYER', fundWith: algokit.algos(3) }, algod)
   await algokit.ensureFunded(
     {
       accountToFund: deployer,
@@ -20,7 +17,6 @@ export async function deploy() {
     },
     algod,
   )
-  const isMainNet = await algokit.isMainNet(algod)
   const appClient = new {{ contract_name.split('_')|map('capitalize')|join }}Client(
     {
       resolveBy: 'creatorAndName',
@@ -37,6 +33,7 @@ export async function deploy() {
     onUpdate: 'append',
   })
   {% elif preset_name == 'production' %}
+  const isMainNet = await algokit.isMainNet(algod)
   const app = await appClient.deploy({
     allowDelete: !isMainNet,
     allowUpdate: !isMainNet,
