feat: add configuration files

--- a/template_content/{% if ide_jetbrains %}.idea{% endif %}/runConfigurations/{% if deployment_language == 'python' %}Deploy_Built_Beaker_application.xml{% endif %}.jinja
+++ b/template_content/{% if ide_jetbrains %}.idea{% endif %}/runConfigurations/{% if deployment_language == 'python' %}Deploy_Built_Beaker_application.xml{% endif %}.jinja
@@ -1,10 +1,11 @@
 <component name="ProjectRunConfigurationManager">
-  <configuration default="false" name="Build Beaker application" type="PythonConfigurationType" factoryName="Python">
+  <configuration default="false" name="Deploy Built Beaker application" type="PythonConfigurationType" factoryName="Python">
     <module name="jetbrains" />
     <option name="INTERPRETER_OPTIONS" value="" />
     <option name="PARENT_ENVS" value="true" />
     <envs>
       <env name="PYTHONUNBUFFERED" value="1" />
+      <env name="envFile" value="$PROJECT_DIR$/.env.localnet" />
     </envs>
     <option name="SDK_HOME" value="$PROJECT_DIR${% if _copier_conf.os == 'windows' %}\.venv\Scripts\python.exe{% else %}/.venv/bin/python{% endif %}" />
     <option name="SDK_NAME" value="Python 3.11 (jetbrains)" />
@@ -13,7 +14,7 @@
     <option name="ADD_CONTENT_ROOTS" value="true" />
     <option name="ADD_SOURCE_ROOTS" value="true" />
     <option name="SCRIPT_NAME" value="$PROJECT_DIR$/smart_contracts" />
-    <option name="PARAMETERS" value="build" />
+    <option name="PARAMETERS" value="launch deploy" />
     <option name="SHOW_COMMAND_LINE" value="false" />
     <option name="EMULATE_TERMINAL" value="false" />
     <option name="MODULE_MODE" value="false" />
