--- a/template_content/{% if ide_jetbrains %}.idea{% endif %}/runConfigurations/{% if deployment_language == 'python' %}Build___Deploy_Beaker_application.xml{% endif %}.jinja
+++ b/template_content/{% if ide_jetbrains %}.idea{% endif %}/runConfigurations/{% if deployment_language == 'python' %}Build___Deploy_Beaker_application.xml{% endif %}.jinja
@@ -8,7 +8,7 @@
       <env name="envFile" value="$PROJECT_DIR$/.env.localnet" />
     </envs>
     <option name="SDK_HOME" value="$PROJECT_DIR${% if _copier_conf.os == 'windows' %}\.venv\Scripts\python.exe{% else %}/.venv/bin/python{% endif %}" />
-    <option name="SDK_NAME" value="Python 3.11 (jetbrains)" />
+    <option name="SDK_NAME" value="Python 3.11 ({% _copier_conf.project_name %})" />
     <option name="WORKING_DIRECTORY" value="$PROJECT_DIR$" />
     <option name="IS_MODULE_SDK" value="false" />
     <option name="ADD_CONTENT_ROOTS" value="true" />
