--- a/template_content/README.md.jinja
+++ b/template_content/README.md.jinja
@@ -16,8 +16,8 @@ This project has been generated using AlgoKit. See below for default getting sta
      - Copy `.env.template` to `.env`
    - Run `algokit localnet start` to start a local Algorand network in Docker. If you are using VS Code launch configurations provided by the template, this will be done automatically for you.
 {%- if deployment_language == "typescript" %}
-     - Run `npm install` to install NPM packages
-{% endif %}
+   - Run `npm install` to install NPM packages
+{%- endif %}
 3. Open the project and start debugging / developing via:
    - VS Code
      1. Open the repository root in VS Code
