--- a/template_content/{% if use_github_actions %}.github{% endif %}/workflows/checks.yaml.jinja
+++ b/template_content/{% if use_github_actions %}.github{% endif %}/workflows/checks.yaml.jinja
@@ -46,12 +46,12 @@ jobs:
           # --ignore-vuln "GHSA-hcpj-qp55-gfph" # GitPython vulnerability, dev only dependency
           poetry run pip-audit
 {%- endif %}
-{%- if use_python_black %}
+{%- if use_python_ruff_formatter %}
 
-      - name: Check formatting with Black
+      - name: Check formatting with Ruff
         run: |
           # stop the build if there are files that don't meet formatting requirements
-          poetry run black --check .
+          poetry run ruff format --check .
 {%- endif %}
 {%- if python_linter == 'ruff' %}
 
