--- a/template_content/{% if use_pre_commit %}.pre-commit-config.yaml{% endif %}.jinja
+++ b/template_content/{% if use_pre_commit %}.pre-commit-config.yaml{% endif %}.jinja
@@ -1,15 +1,17 @@
 repos:
   - repo: local
     hooks:
-      {% if use_python_black %}
-      - id: black
-        name: black
-        description: "Black: The uncompromising Python code formatter"
-        entry: poetry run black
+      {% if use_python_ruff_formatter %}
+      - id: ruff-format
+        name: ruff-format
+        description: "Run 'ruff format' for extremely fast Python formatting"
+        entry: poetry run ruff format
         language: system
-        minimum_pre_commit_version: 2.9.2
+        types: [python, pyi]
+        args: []
         require_serial: true
-        types_or: [ python, pyi ]
+        additional_dependencies: []
+        minimum_pre_commit_version: "0"
       {% endif %}
       {% if python_linter == 'ruff' %}
       - id: ruff
