chore: update ruff and vscode settings

--- a/template_content/pyproject.toml.jinja
+++ b/template_content/pyproject.toml.jinja
@@ -16,7 +16,7 @@ python-dotenv = "^1.0.0"
 black = {extras = ["d"], version = "*"}
 {% endif -%}
 {% if python_linter == 'ruff' -%}
-ruff = ">=0.0.260"
+ruff = "^0.1.6"
 {% elif python_linter == 'flake8' -%}
 flake8 = "*"
 {% endif -%}
