chore: some edits in settings

--- a/template_content/pyproject.toml.jinja
+++ b/template_content/pyproject.toml.jinja
@@ -39,6 +39,7 @@ build-backend = "poetry.core.masonry.api"
 
 {% if python_linter == 'ruff' -%}
 [tool.ruff]
+line-length = 120
 select = ["E", "F", "ANN", "UP", "N", "C4", "B", "A", "YTT", "W", "FBT", "Q", "RUF", "I"]
 ignore = [
   "ANN101", # no type for self
