--- a/template_content/smart_contracts/__main__.py.jinja
+++ b/template_content/smart_contracts/__main__.py.jinja
@@ -12,6 +12,11 @@ from smart_contracts.helpers.deploy import deploy
 from smart_contracts.helpers.build import build
 {%- endif %}
 
+# # Uncomment the following lines to enable auto generation of AVM Debugger compliant sourceMap and simulation trace file.
+# # Learn more about using AVM Debugger to debug your TEAL source codes and algorand transactions of various kinds here: [TODO: put link once available]
+# from algokit_utils.config import config
+# config.configure(debug=True, trace_all=True)
+
 logging.basicConfig(
     level=logging.DEBUG, format="%(asctime)s %(levelname)-10s: %(message)s"
 )
