refactor: adding avm launch config; refining readme and code tour

--- a/template_content/README.md.jinja
+++ b/template_content/README.md.jinja
@@ -59,6 +59,9 @@ Refer to the commented header in the `__main__.py` file in the `smart_contracts`
 {%- elif deployment_language == 'typescript' %}
 Refer to the commented header in the `index.ts` file in the `smart_contracts` folder.
 {%- endif %}
+
+If you have opted in to include VSCode launch configurations in your project, you can also use the `Debug TEAL via AlgoKit AVM Debugger` launch configuration to interactively select an available trace file and launch the debug session for your smart contract.
+
 For information on using and setting up the `AlgoKit AVM Debugger` VSCode extension refer [here](https://github.com/algorandfoundation/algokit-avm-vscode-debugger).
 
 #### Setting up GitHub for CI/CD workflow and TestNet deployment
