--- a/template_content/{% if ide_vscode %}.vscode{% endif %}/extensions.json.jinja
+++ b/template_content/{% if ide_vscode %}.vscode{% endif %}/extensions.json.jinja
@@ -17,6 +17,7 @@
     {% endif -%}
     "tamasfe.even-better-toml",
     "editorconfig.editorconfig",
-    "vsls-contrib.codetour"
+    "vsls-contrib.codetour",
+    "algorand foundation.algokit-avm-vscode-debugger"
   ]
 }
