feat: adding support for typescript tests

--- a/template_content/README.md.jinja
+++ b/template_content/README.md.jinja
@@ -93,6 +93,9 @@ For pull requests and pushes to `main` branch against this repository the follow
 {%- if use_python_pytest %}
  - Python tests are executed using [pytest](https://docs.pytest.org/)
 {%- endif %}
+{%- if use_typescript_jest %}
+ - Typescript tests are executed using [Jest](https://jestjs.io/)
+{%- endif %}
  - Smart contract artifacts are built
  - Smart contract artifacts are checked for [output stability](https://github.com/algorandfoundation/algokit-cli/blob/main/docs/articles/output_stability.md)
  - Smart contract is deployed to a AlgoKit LocalNet instance
@@ -137,10 +140,13 @@ This project makes use of Python to build Algorand smart contracts. The followin
  - [pre-commit](https://pre-commit.com/): A framework for managing and maintaining multi-language pre-commit hooks, to enable pre-commit you need to run `pre-commit install` in the root of the repository. This will install the pre-commit hooks and run them against modified files when committing. If any of the hooks fail, the commit will be aborted. To run the hooks on all files, use `pre-commit run --all-files`.
 {%- endif %}
 {%- if deployment_language == "typescript" %}
-- [npm](https://www.npmjs.com/): Node.js package manager
-- [TypeScript](https://www.typescriptlang.org/): Strongly typed programming language that builds on JavaScript
-- [ts-node-dev](https://github.com/wclr/ts-node-dev): TypeScript development execution environment
+- [npm](https://www.npmjs.com/): Node.js package manager.
+- [TypeScript](https://www.typescriptlang.org/): Strongly typed programming language that builds on JavaScript.
+- [ts-node-dev](https://github.com/wclr/ts-node-dev): TypeScript development execution environment.
 {% endif -%}
+{%- if use_typescript_jest %}
+- [Jest](https://jestjs.io/): Automated testing.
+{%- endif %}
 
 {% if ide_vscode %}
 It has also been configured to have a productive dev experience out of the box in [VS Code](https://code.visualstudio.com/), see the [.vscode](./.vscode) folder.
