--- a/template_content/{% if use_python_pytest %}tests{% endif %}/{% if use_python_pytest %}{{ contract_name }}_test.py{% endif %}.jinja
+++ b/template_content/{% if use_python_pytest %}tests{% endif %}/{% if use_python_pytest %}{{ contract_name }}_test.py{% endif %}.jinja
@@ -1,36 +1,46 @@
+import algokit_utils
 import pytest
-from algokit_utils import (
-    ApplicationClient,
-    ApplicationSpecification,
-    get_localnet_default_account,
-)
+from algokit_utils import get_localnet_default_account
 from algosdk.v2client.algod import AlgodClient
-
-from smart_contracts.{{ contract_name }} import contract as {{ contract_name }}_contract
-
-
-@pytest.fixture(scope="session")
-def {{ contract_name }}_app_spec(algod_client: AlgodClient) -> ApplicationSpecification:
-    return {{ contract_name }}_contract.app.build(algod_client)
+from algosdk.v2client.indexer import IndexerClient
+from artifacts.hello_world.client import HelloWorldClient
 
 
 @pytest.fixture(scope="session")
 def {{ contract_name }}_client(
-    algod_client: AlgodClient, {{ contract_name }}_app_spec: ApplicationSpecification
-) -> ApplicationClient:
-    client = ApplicationClient(
+    algod_client: AlgodClient, indexer_client: IndexerClient
+) -> {{ contract_name.split('_')|map('capitalize')|join }}Client:
+    client = {{ contract_name.split('_')|map('capitalize')|join }}Client(
         algod_client,
-        app_spec={{ contract_name }}_app_spec,
-        signer=get_localnet_default_account(algod_client),
+        creator=get_localnet_default_account(algod_client),
+        indexer_client=indexer_client,
+    )
+
+    client.deploy(
+        on_schema_break=algokit_utils.OnSchemaBreak.ReplaceApp,
+        on_update=algokit_utils.OnUpdate.UpdateApp,
+        allow_delete=True,
+        allow_update=True,
         {%- if preset_name == 'production' %}
         template_values={"UPDATABLE": 1, "DELETABLE": 1},
         {%- endif %}
     )
-    client.create()
     return client
 
 
-def test_says_hello({{ contract_name }}_client: ApplicationClient) -> None:
-    result = {{ contract_name }}_client.call({{ contract_name }}_contract.hello, name="World")
+def test_says_hello({{ contract_name }}_client: {{ contract_name.split('_')|map('capitalize')|join }}Client) -> None:
+    result = {{ contract_name }}_client.hello(name="World")
 
     assert result.return_value == "Hello, World"
+
+
+def test_simulate_says_hello_with_correct_budget_consumed(
+    {{ contract_name }}_client: {{ contract_name.split('_')|map('capitalize')|join }}Client, algod_client: AlgodClient
+) -> None:
+    atc = {{ contract_name }}_client.compose().hello(name="World").hello(name="Jane").atc
+
+    result = atc.simulate(algod_client)
+
+    assert result.abi_results[0].return_value == "Hello, World"
+    assert result.abi_results[1].return_value == "Hello, Jane"
+    assert result.simulate_response["txn-groups"][0]["app-budget-consumed"] == 98
