--- a/template_content/{% if deployment_language == 'typescript' or use_typescript_jest %}package.json{% endif %}.jinja
+++ b/template_content/{% if deployment_language == 'typescript' or use_typescript_jest %}package.json{% endif %}.jinja
@@ -6,7 +6,10 @@
   "scripts": {
     "deploy": "ts-node-dev --transpile-only --watch .env -r dotenv/config smart_contracts/index.ts",
     "deploy:ci": "ts-node --transpile-only -r dotenv/config smart_contracts/index.ts",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    {%- if use_typescript_jest  %}
+    "test": "jest --coverage"
+    {%- endif %}
   },
   "engines": {
     "node": ">=18.0"
@@ -16,8 +19,14 @@
     "algosdk": "^2.5.0"
   },
   "devDependencies": {
+    {%- if use_typescript_jest  %}
+    "@types/jest": "^29.5.11",
+    {%- endif %}
     "dotenv": "^16.0.3",
     "prettier": "^2.8.4",
+    {%- if use_typescript_jest  %}
+    "ts-jest": "^29.1.1",
+    {%- endif %}
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
   }
