--- a/template_content/{% if use_typescript_jest %}tests{% endif %}/{% if use_typescript_jest %}{{ contract_name.split('_')|join('-') }}.spec.ts{% endif %}.jinja
+++ b/template_content/{% if use_typescript_jest %}tests{% endif %}/{% if use_typescript_jest %}{{ contract_name.split('_')|join('-') }}.spec.ts{% endif %}.jinja
@@ -1,8 +1,8 @@
 import { algorandFixture } from '@algorandfoundation/algokit-utils/testing'
-import { {{ contract_name.split('_')|map('capitalize')|join }}Client } from './client'
+import { {{ contract_name.split('_')|map('capitalize')|join }}Client } from '../smart_contracts/artifacts/{{ contract_name }}/client'
 import { Account, Algodv2, Indexer } from 'algosdk'
 
-describe('client', () => {
+describe('{{ contract_name.split('_')|join(' ') }} contract', () => {
   const localnet = algorandFixture()
   beforeEach(localnet.beforeEach)
 
