--- a/template_content/{% if deployment_language == 'typescript' or use_typescript_jest %}package.json{% endif %}.jinja
+++ b/template_content/{% if deployment_language == 'typescript' or use_typescript_jest %}package.json{% endif %}.jinja
@@ -6,10 +6,10 @@
   "scripts": {
     "deploy": "ts-node-dev --transpile-only --watch .env -r dotenv/config smart_contracts/index.ts",
     "deploy:ci": "ts-node --transpile-only -r dotenv/config smart_contracts/index.ts",
-    "format": "prettier --write .",
     {%- if use_typescript_jest  %}
-    "test": "jest --coverage"
+    "test": "jest --coverage",
     {%- endif %}
+    "format": "prettier --write ."
   },
   "engines": {
     "node": ">=18.0"
