--- a/template_content/{% if use_typescript_jest %}tests{% endif %}/{% if use_typescript_jest %}{{ contract_name.split('_')|join('-') }}.spec.ts{% endif %}.jinja
+++ b/template_content/{% if use_typescript_jest %}tests{% endif %}/{% if use_typescript_jest %}{{ contract_name.split('_')|join('-') }}.spec.ts{% endif %}.jinja
@@ -37,12 +37,10 @@ describe('{{ contract_name.split('_')|join(' ') }} contract', () => {
   test('simulate says hello with correct budget consumed', async () => {
     const { algod, indexer, testAccount } = localnet.context
     const { client } = await deploy(testAccount, algod, indexer)
-    const atc = await client.compose().hello({ name: 'World' }).hello({ name: 'Jane' }).atc()
-
-    const result = await atc.simulate(algod)
+    const result = await client.compose().hello({ name: 'World' }).hello({ name: 'Jane' }).simulate()
 
     expect(result.methodResults[0].returnValue).toBe('Hello, World')
     expect(result.methodResults[1].returnValue).toBe('Hello, Jane')
-    expect(result.simulateResponse.txnGroups[0].appBudgetConsumed).toBe(98)
+    expect(result.simulateResponse.txnGroups[0].appBudgetConsumed).toBeLessThan(100)
   })
 })
