--- a/template_content/smart_contracts/__main__.py.jinja
+++ b/template_content/smart_contracts/__main__.py.jinja
@@ -12,10 +12,12 @@ from smart_contracts.helpers.deploy import deploy
 from smart_contracts.helpers.build import build
 {%- endif %}
 
-# # Uncomment the following lines to enable auto generation of AVM Debugger compliant sourceMap and simulation trace file.
-# # Learn more about using AlgoKit AVM Debugger to debug your TEAL source codes and inspect various kinds of Algorand transactions in atomic groups -> https://github.com/algorandfoundation/algokit-avm-vscode-debugger
-# from algokit_utils.config import config
-# config.configure(debug=True, trace_all=True)
+{% if deployment_language == 'python' -%}
+# Uncomment the following lines to enable auto generation of AVM Debugger compliant sourceMap and simulation trace file.
+# Learn more about using AlgoKit AVM Debugger to debug your TEAL source codes and inspect various kinds of Algorand transactions in atomic groups -> https://github.com/algorandfoundation/algokit-avm-vscode-debugger
+from algokit_utils.config import config
+config.configure(debug=True, trace_all=True)
+{%- endif %}
 
 logging.basicConfig(
     level=logging.DEBUG, format="%(asctime)s %(levelname)-10s: %(message)s"
