--- a/template_content/{% if deployment_language == 'typescript' %}package.json{% endif %}.jinja
+++ b/template_content/{% if deployment_language == 'typescript' %}package.json{% endif %}.jinja
@@ -12,7 +12,7 @@
     "node": ">=18.0"
   },
   "dependencies": {
-    "@algorandfoundation/algokit-utils": "^5.1.0-beta.1",
+    "@algorandfoundation/algokit-utils": "^5.1.0",
     "algosdk": "^2.5.0"
   },
   "devDependencies": {
