--- a/template_content/{% if ide_vscode %}.tours{% endif %}/getting-started-with-your-algokit-project.tour.jinja
+++ b/template_content/{% if ide_vscode %}.tours{% endif %}/getting-started-with-your-algokit-project.tour.jinja
@@ -23,8 +23,8 @@
       "line": 32
     },
     {
-      "file": "tests/hello_world_test.py",
-      "description": "If you opted to include unit tests, the default tests provided demonstrate an example of mocking, setting up fixtures, and testing smart contract calls on an AlgoKit application client.",
+      "file": "tests/{% if deployment_language == 'typescript' %}{{ contract_name.split('_')|join('-') }}.spec.ts{% else %}{{ contract_name }}_test.py{% endif %}",
+      "description": "If you opted to include unit tests, the default tests provided demonstrate an example of mocking, setting up fixtures, and testing smart contract calls on an AlgoKit Typed client.",
       "line": 21
     },
     {
